add cited dog care consultation
